2007-08-26  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c: (totem_playlist_entry_parsed):
	We ignore 0-length items in playlists, they're usually just banners
	(Closes: #441702)

2007-08-26  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c: (entry_parsed):
	* src/plparse/plparser.symbols:
	* src/plparse/test-parser.c: (test_duration_real), (test_duration),
	(main):
	* src/plparse/totem-pl-parser.c: (totem_plparser_parse_duration):
	* src/plparse/totem-pl-parser.h:
	Move totem_embedded_parse_duration from the plugin viewer to the
	playlist parser, add test cases in test-parser, move the PLS
	parsing to the be last one, as it's the less restrictive and sscanf
	is dumb (Closes: #467408)

2007-08-26  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* src/plugins/mythtv/*: Add the first pass at a MythTV plugin,
	only shows recordings, and has hard-coded server

2007-08-26  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c: (drop_cb), (button_release_cb),
	(drag_end_cb), (treeview_row_changed), (init_treeview),
	(totem_playlist_add_one_mrl): Add support for dropping files
	at a specific place in the playlist tree (Closes: #469810)

2007-08-25  Bastien Nocera  <hadess@hadess.net>

	* data/totem.ui:
	* src/totem-preferences.c: (totem_setup_preferences):
	Remove work-around for bug 470243 and add the CellRenderer to
	the .ui file instead

2007-08-25  Bastien Nocera  <hadess@hadess.net>

	* src/totem-preferences.c: (totem_setup_preferences): 
	Block the signal from the "enable viz" toggle to avoid asking
	twice if the user really wants to enable visualisations, and
	answers yes the first time asked (Closes: #469300)

2007-08-25  Bastien Nocera  <hadess@hadess.net>

	* src/totem-preferences.c: (totem_setup_preferences):
	Work-around no visuals showing up in the visuals combo box, see
	http://bugzilla.gnome.org/show_bug.cgi?id=470243 for details

2007-08-25  Bastien Nocera  <hadess@hadess.net>
