@@ -1,5 +1,15 @@
 2007-08-26  Bastien Nocera  <hadess@hadess.net>
 
+	* src/backend/Makefile.am:
+	* src/backend/bacon-video-widget-xine.c: (xine_event_message),
+	(add_auth_to_uri), (bacon_video_widget_open_with_subtitle):
+	Patch from Dmitri Fedortchenko <zeraien@gmail.com> to make
+	the backend try to get authentication information from the
+	GNOME keyring when it gets a permission denied on HTTP.
+	(Closes: #418316)
+
+2007-08-26  Bastien Nocera  <hadess@hadess.net>
+
 	* src/totem-playlist.c: (totem_playlist_entry_parsed):
 	We ignore 0-length items in playlists, they're usually just banners
 	(Closes: #441702)
